# owrx_connector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-debian-packages.sh  cmake-builder-deps  connector.cpp  connector.hpp  connector_params.h  control_connection.cpp  control_connection.hpp  control_worker_args.h  conversions.c  conversions.h  fmv.h  gainspec.cpp  gainspec.hpp  handler.hpp  iq_connection.cpp  iq_connection.hpp  ringbuffer.cpp  ringbuffer.hpp  rtl_connector.c  rtl_connector.cpp  rtl_connector.hpp  rtl_handler.cpp  rtl_handler.hpp  rtl_tcp_connector.c  shims.h  soapy_connector.c  soapy_connector.cpp  soapy_connector.hpp  strtolower.c  strtolower.h  version.c  version.h
cmake/: DetectIfunc.cmake  ifunc_test.c
debian/: changelog  control  copyright  libowrx-connector-dev.install  rtl-connector.install  rtl-tcp-connector.install  soapy-connector.install
docker/: build-package.sh
include/owrx/: connector.hpp  gainspec.hpp  ringbuffer.hpp
src/app/: CMakeLists.txt  rtl_connector.cpp  rtl_connector.hpp  rtl_tcp_connector.cpp  rtl_tcp_connector.hpp  soapy_connector.cpp  soapy_connector.hpp  throughput_test.cpp
src/lib/: CMakeLists.txt  Config.cmake.in  connector.cpp  control_connection.cpp  control_connection.hpp  fmv.h  gainspec.cpp  iq_connection.cpp  iq_connection.hpp  owrx-connector.pc.in  ringbuffer.cpp  rtl_tcp_connection.cpp  rtl_tcp_connection.hpp
